# rlcollector

./: .gitignore  BUILD.md  CLAUDE.md  PLAN.md  README.md  env.sh  package-lock.json  package.json  start.ps1  start.sh  tsconfig.json  vite.config.ts
.claude/: settings.local.json
public/: overlay.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  capture.rs  commands.rs  lib.rs  main.rs  models.rs  ollama_sidecar.rs  storage.rs  tray.rs
src/components/: CaptureControls.tsx  CollectionDetail.tsx  Collections.tsx  Dashboard.tsx  Popup.tsx  Settings.tsx  TaskDetail.tsx
src/components/__tests__/: CaptureControls.test.tsx  CollectionDetail.test.tsx  Collections.test.tsx  Dashboard.test.tsx  Popup.test.tsx  Settings.test.tsx  TaskDetail.test.tsx
src/hooks/: useCapture.ts  useCollections.ts  useSessions.ts  useTasks.ts
src/lib/: tauri.ts
src/test/: mocks.ts
