[package]
name = "rlcollector"
version = "0.1.0"
description = "Collect structured RL data from your normal work"
authors = ["you"]
edition = "2021"

[lib]
name = "rlcollector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
xcap = "0.0.14"
base64 = "0.22"
image = "0.25"
thiserror = "2"
dirs-next = "2"
log = "0.4"
tauri-plugin-log = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
